Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8862

[C++] NumericBuilder does not use MemoryPool passed to CTOR

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.15.0
    • 1.0.0
    • C++

    Description

      NumericBuilder uses the pool (MemoryPool*) parameter to initialise the ArrayBuilder base class, but does not use it to initialise its own internal builder, data_builder_ (TypedBufferBuilder). For comparison ArrayBuilder uses the pool to initialise its own null_bitmap_builder_ member (also a TypedBufferBuilder).

      Found in version 0.15.0, present in current head.

      This effect was observed when trying to switch to a custom MemoryPool for performance reasons. A hook was used to detect any use of the MemoryPool proved by default_memory_pool().

      Attachments

        Issue Links

          Activity

            People

              sawatts Simon Watts
              sawatts Simon Watts
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m